--- a/src/components/Loading/index.scss
+++ b/src/components/Loading/index.scss
@@ -1,15 +1,15 @@
 .loading-indicator {
 	position: absolute;
-	top: 0;
 	left: 0;
+	top: 0;
+	z-index: 10000;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.9);
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	justify-content: center;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0, 0, 0, 0.9);
-	z-index: 10000;
 	pointer-events: none;
 
 	.spinner {
@@ -19,11 +19,10 @@
 		border-top: 5px solid white;
 		border-right: 2px solid white;
 		border-radius: 50%;
-		// background-color: rgba(0, 0, 0, .2);
 		pointer-events: none;
-		animation: app-logo-spin infinite 5s linear;
+		animation: rotate-spinner infinite 5s linear;
 
-		@keyframes app-logo-spin {
+		@keyframes rotate-spinner {
 			from {
 				transform: rotate(0deg);
 			}
